move toolinfo from file to db
