# golang/cmd/cwlclient/api/api/openapi.yaml
@@ -38,6 +38,22 @@ paths:
                 $ref: '#/components/schemas/_api_getJobInfo_post_200_response'
           description: Exectable jobs
       summary: get job detailed imformation
+  /api/importTool:
+    post:
+      description: import tool
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/_api_importTool_post_request'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/_api_importTool_post_200_response'
+          description: Exectable jobs
+      summary: import tool
 components:
   parameters: {}
   schemas:
@@ -98,4 +114,20 @@ components:
           type: string
       required:
       - status
+      type: object
+    _api_importTool_post_request:
+      properties:
+        toolPath:
+          type: string
+      required:
+      - toolPath
+      type: object
+    _api_importTool_post_200_response:
+      example:
+        toolId: toolId
+      properties:
+        toolId:
+          type: string
+      required:
+      - toolId
       type: object
