# golang/cmd/cwlclient/api/model__api_import_tool_post_request.go
@@ -1,0 +1,158 @@
+/*
+Flowy Client API
+
+This is the API
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ApiImportToolPostRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ApiImportToolPostRequest{}
+
+// ApiImportToolPostRequest struct for ApiImportToolPostRequest
+type ApiImportToolPostRequest struct {
+	ToolPath string `json:"toolPath"`
+}
+
+type _ApiImportToolPostRequest ApiImportToolPostRequest
+
+// NewApiImportToolPostRequest instantiates a new ApiImportToolPostRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewApiImportToolPostRequest(toolPath string) *ApiImportToolPostRequest {
+	this := ApiImportToolPostRequest{}
+	this.ToolPath = toolPath
+	return &this
+}
+
+// NewApiImportToolPostRequestWithDefaults instantiates a new ApiImportToolPostRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewApiImportToolPostRequestWithDefaults() *ApiImportToolPostRequest {
+	this := ApiImportToolPostRequest{}
+	return &this
+}
+
+// GetToolPath returns the ToolPath field value
+func (o *ApiImportToolPostRequest) GetToolPath() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.ToolPath
+}
+
+// GetToolPathOk returns a tuple with the ToolPath field value
+// and a boolean to check if the value has been set.
+func (o *ApiImportToolPostRequest) GetToolPathOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.ToolPath, true
+}
+
+// SetToolPath sets field value
+func (o *ApiImportToolPostRequest) SetToolPath(v string) {
+	o.ToolPath = v
+}
+
+func (o ApiImportToolPostRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ApiImportToolPostRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["toolPath"] = o.ToolPath
+	return toSerialize, nil
+}
+
+func (o *ApiImportToolPostRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"toolPath",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varApiImportToolPostRequest := _ApiImportToolPostRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varApiImportToolPostRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ApiImportToolPostRequest(varApiImportToolPostRequest)
+
+	return err
+}
+
+type NullableApiImportToolPostRequest struct {
+	value *ApiImportToolPostRequest
+	isSet bool
+}
+
+func (v NullableApiImportToolPostRequest) Get() *ApiImportToolPostRequest {
+	return v.value
+}
+
+func (v *NullableApiImportToolPostRequest) Set(val *ApiImportToolPostRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableApiImportToolPostRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableApiImportToolPostRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableApiImportToolPostRequest(val *ApiImportToolPostRequest) *NullableApiImportToolPostRequest {
+	return &NullableApiImportToolPostRequest{value: val, isSet: true}
+}
+
+func (v NullableApiImportToolPostRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableApiImportToolPostRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
